--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "babel-preset-es2015": "^6.24.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "css-loader": "^5.0.1",
+    "echarts": "^5.0.0",
+    "element-ui": "^2.14.1",
+    "file-loader": "^6.2.0",
+    "style-loader": "^2.0.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
@@ -32,7 +40,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/no-unused-components": "off",
+      "no-console": "off"
+    }
   },
   "browserslist": [
     "> 1%",
