--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "echarts": "^5.0.0",
     "element-ui": "^2.14.1",
     "file-loader": "^6.2.0",
+    "sass-loader": "^10.1.1",
+    "scss-loader": "^0.0.1",
     "style-loader": "^2.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9"
