--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-es2015": "^6.24.1",
     "core-js": "^3.6.5",
     "css-loader": "^5.0.1",
+    "dayjs": "^1.10.4",
     "echarts": "^5.0.0",
     "element-ui": "^2.14.1",
     "file-loader": "^6.2.0",
