--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/code-frame": "^7.12.13",
     "axios": "^0.21.0",
     "babel-preset-es2015": "^6.24.1",
     "core-js": "^3.6.5",
@@ -16,7 +17,8 @@
     "echarts": "^5.0.0",
     "element-ui": "^2.14.1",
     "file-loader": "^6.2.0",
-    "sass-loader": "^10.1.1",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.0.1",
     "scss-loader": "^0.0.1",
     "style-loader": "^2.0.0",
     "vue": "^2.6.11",
@@ -29,6 +31,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+
+    "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
