--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "echarts": "^5.0.0",
     "element-ui": "^2.14.1",
     "file-loader": "^6.2.0",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "^7.1.0",
+    "node-sass": "^4.11.0",
     "scss-loader": "^0.0.1",
     "style-loader": "^2.0.0",
     "vue": "^2.6.11",
