--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "sass-loader": "^7.0.1",
     "scss-loader": "^0.0.1",
     "style-loader": "^2.0.0",
+    "three": "^0.126.1",
+    "three-css2drender": "^1.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9"
   },
@@ -31,7 +33,6 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-
     "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.11"
   },
